# windwhisper

./: .env  README.md  pyproject.toml  readthedocs.yaml  requirements.txt
dev/: Untitled.ipynb  ambient noise.ipynb  eu_noise_map.ipynb  human health.ipynb  new_worflow.ipynb  test.py
dev/EU noise maps download/: dataset.py  eu_noise_maps.ipynb  noise_downloader.py
dev/lena/: CH assessment.ipynb
dev/ricky/: ricky.ipynb
docs/: Makefile  conf.py  index.rst  installation.rst  overview.md  requirements.txt  user_guide.md
docs/api/: index.rst
windwhisper/: __init__.py  ambient_noise.py  atmospheric_absorption.py  electricity_production.py  elevation_grid.py  geometric_divergence.py  ground_attenuation.py  health_impacts.py  noiseanalysis.py  noisepropagation.py  plotting.py  settlement.py  utils.py  windspeed.py  windturbines.py
windwhisper/data/: Population_data.csv  absorption_coefficients.yaml  data_diseases_europe.csv  health_parameters.json
